Fix overflowing pokemon list for new accounts

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -213,8 +213,8 @@ body:hover {
 
 #pokemonListContainer {
   max-height: 300px;
-
-  .card-body {
+  #pokemonListBody {
+    max-height: 250px;
     overflow: auto;
   }
 }
@@ -222,6 +222,9 @@ body:hover {
 @media (min-width: 992px) {
   #pokemonListContainer {
     max-height: 400px;
+    #pokemonListBody {
+      max-height: 350px;
+    }
   }
 }
 
